# nanopilot

./: .gitattributes  .gitignore  .gitmodules  .ins-board.sublime-project  CMakeLists.txt  LICENSE.txt  Makefile  Makefile.include.jinja  Readme.md  build_test_all.sh  diff_press_read_ros2.py  git_revision.sh  oocd.cfg  package.yml  requirements.txt  rules.ld  run_tests.sh  tools.mk
cmake/: Findcmp.cmake  Findcmp_mem_access.cmake  (+2 more)
lib/mcucom/msgbus/: CMakeLists.txt  msgbus.c  msgbus.h
lib/mcucom/msgbus/cmake/: msgbus.cmake
lib/mcucom/msgbus/tests/: cpp_wrapper_test.cpp  subscriber_test.cpp  topic_test.cpp
lib/mcucom/ts/: CMakeLists.txt  deserialization_msgpack.c  deserialization_msgpack.h  serialization_msgpack.c  type_print.c
lib/mcucom/ts/cmake/: ts.cmake
lib/mcucom/ts/tests/: serialization_csv_test.cpp  serialization_msgpack_test.cpp
src/autopilot_msgs/: CMakeLists.txt  package.xml
src/autopilot_msgs/msg/: AccelerationTrajectorySetpoint.msg  ActuatorPositions.msg  ActuatorPositionsStamped.msg  AttitudeControllerStatus.msg  AttitudeTrajectorySetpoint.msg  Control.msg  ControlStatus.msg  PositionTrajectorySetpoint.msg  RCInput.msg  RateControlSetpoint.msg  TimeSyncStat.msg
src/autopilot_msgs/srv/: SendMsgpackConfig.srv
src/control/pid/: CMakeLists.txt  package.xml
src/control/pid/include/pid/: pid.hpp
src/control/pid/src/: pid.cpp
src/control/rc_control/: CMakeLists.txt  package.xml
src/control/rc_control/src/: rc_ctrl.cpp
src/drivers/realsense-t265/: CMakeLists.txt  package.xml
src/drivers/realsense-t265/src/: t265_pose_publisher.cpp
src/low_level_controller/: .gitignore  CMakeLists.txt  Readme.md  git_revision.sh  requirements.txt  requirements_build.txt  rules.mk
src/low_level_controller/cmake/: cmp_mem_access.cmake  fatfs.cmake
src/low_level_controller/lib/fatfs/: fatfs.mk  fatfs_diskio.h
src/low_level_controller/lib/fatfs/src/: ffconf.h
src/low_level_controller/lib/mcucom/msgbus/: msgbus.h  typesafe_wrapper.h
src/low_level_controller/lib/mcucom/msgbus/tests/: atomicity.cpp  bus_test.cpp  signaling.cpp
src/low_level_controller/lib/mcucom/net/: CMakeLists.txt  net.h
src/low_level_controller/lib/mcucom/net/tests/: test_net.cpp
src/low_level_controller/lib/mcucom/port/ChibiOS/: mcucom_port_assert.h  mcucom_port_sync.h
src/low_level_controller/lib/mcucom/port/posix/: mcucom_port_assert.h
src/low_level_controller/lib/mcucom/port/unittest_mock/: mcucom_port_assert.cpp  mcucom_port_assert.h  mcucom_port_sync.h
src/low_level_controller/lib/mcucom/ts/: serialization_msgpack.c  serialization_msgpack.h  type_print.h
src/low_level_controller/lib/mcucom/ts/cmake/: ts.cmake  type_compiler.cmake
src/low_level_controller/lib/mcucom/ts/tests/: deserialization_msgpack_test.cpp  serialization_msgpack_test.cpp
src/low_level_controller/lib/mcucom/ts/type_compiler/: test_type_compiler.py
src/low_level_controller/llc_ros_interface/: comm.cpp  comm.h  msg.h
src/low_level_controller/ros_interface/: CMakeLists.txt  board.h  comm.cpp  comm.h  llc_ros_interface.cpp  msg.h  package.xml
src/low_level_controller/src/: actuators.hpp  airdata.h  analog.c  arm_led.cpp  arm_led.h  attitude_controller.cpp  attitude_controller.hpp  attitude_determination.cpp  attitude_determination.h  attitude_filter.cpp  attitude_filter.hpp  blocking_uart.c  control_loop.cpp  control_loop.hpp  datagram_message_comm.c  eeprom.cpp  eeprom.hpp  error.c  hott_tm.c  hott_tm.cpp  hott_tm.hpp  icm20602_publisher.cpp  icm20602_publisher.hpp  lis3mdl_publisher.cpp  lis3mdl_publisher.hpp  log.c  log.h  log_handlers.h  low_pass_filter.cpp  low_pass_filter.hpp  lsm6dsm_publisher.cpp  lsm6dsm_publisher.hpp  ms4525do_publisher.c  msgbus_scheduler.c  msgbus_scheduler.h  output_mixer_linear.cpp  output_mixer_linear.hpp  panic_handler.c  panic_handler.h  parameter_port.c  (+38 more)
src/low_level_controller/src/drivers/: CMakeLists.txt  h3lis331dl.h  hmc5883l.c  hmc5883l.h  icm20602.c  icm20602.h  lis3mdl.c  lis3mdl.h  lsm6dsm.c  lsm6dsm.h  mpu60X0.c  mpu60X0.h  mpu60X0_registers.h  ms4525do.c  ms4525do.h
src/low_level_controller/src/drivers/tests/: test_ms4525do.cpp
src/low_level_controller/src/drivers/tests/mock/: hal.cpp  hal.h
src/low_level_controller/src/flight-stack/: CMakeLists.txt  runtests.sh
src/low_level_controller/src/flight-stack/src/: ExtendedKalmanFilter.h  math_helpers_test.cpp  template_kalman_test.cpp
src/low_level_controller/src/flight-stack/src/attitude_estimation/: ekf_gyro_acc.cpp  ekf_gyro_acc_mag_error_quat.h  ekf_gyro_acc_test.cpp  mekf_gyro_acc_mag.h
src/low_level_controller/src/flight-stack/src/attitude_estimation/code_gen/: c_code_gen.py  ekf_gyro_acc_mag_error_quat.py
src/low_level_controller/src/hott/: sumd.h  telemetry.c  telemetry.h
src/low_level_controller/src/hott/tools/: Makefile
src/low_level_controller/src/msgbus/: CMakeLists.txt  example.cpp  example2.cpp  msgbus.hpp  msgbus_unittests.cpp  port.hpp
src/low_level_controller/src/tests/: fatfs_tests.cpp  libnop_tests.cpp  log_test.cpp  pid_test.cpp  timestamp_mock.c  timestamp_mock_test.cpp
src/low_level_controller/src/tests/hott/: telemetry_test.cpp
src/low_level_controller/src/tests/mock/: board.h  fatfs_diskio_mem_drv.h  hal.h
src/low_level_controller/tools/: graph.py  parameter_set.py  send_config.py
src/low_level_controller/tools/ping/: ping.c
src/low_level_controller/tools/serial_test/: serial_test.c  statistics.c  statistics.h
src/low_level_controller/types/: geometry.type  vario_msg.type
src/low_level_controller_interface/: CMakeLists.txt  llc_ros_interface.cpp  package.xml
src/navigation/attitude_ekf/: CMakeLists.txt  package.xml
src/navigation/attitude_ekf/doc/: attitude_ekf.tex
src/navigation/attitude_ekf/src/: attitude_ekf.cpp  attitude_pos_ekf.cpp  ekf.hpp
src/navigation/attitude_ekf/src/code_gen/: ATTITUDE_MEKF_GRAVITY_MAG.ipynb  ekf_gyro_acc_mag.py  ekf_gyro_mag.h
src/navigation/attitude_ekf/src/code_gen/.ipynb_checkpoints/: ATTITUDE_MEKF_GRAVITY_MAG-checkpoint.ipynb
src/timing/: CMakeLists.txt  package.xml
src/timing/src/: pub.cpp  sub.cpp
(+219 files in other folders)
