<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>llc_ros_interface</name>
  <version>0.0.1</version>
  <description>Low Level Controller ROS interface</description>
  <maintainer email="stapelzeiger@gmail.com">Patrick Spieler</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>autopilot_msgs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>autopilot_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
